add:new features on index page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@
     padding: 100px auto;
     display: flex;
     flex-direction: column;
-    div{
+    .input-wrapper{
         display: flex;
         flex-direction: column;
         margin-top: 190px;
@@ -35,8 +35,28 @@
         background-color: blue;
         color: white;
         padding:10px 20px;
-        &:hover{
+        &:hover{    
             box-shadow: 40px 35px 46px 0px rgba(0, 144, 255, 1);
         }
+    }
+    .answer--wrapper{
+        padding: 10px 20px;
+        border:1px solid black;
+        width: 100%;
+        margin-top: 10px;
+        border-radius: 8px;
+
+    }
+    h2{
+        color: black;
+        font-size: 20px;
+        font-family: monospace;
+        margin-block: 20px;
+    }
+    p{
+        color: rgb(55, 0, 255);
+        font-size: 16px;
+        font-family: sans-serif;
+
     }
 }
