--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
 }
-.container div {
+.container .input-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -71,4 +71,22 @@
 .container button:hover {
   -webkit-box-shadow: 40px 35px 46px 0px rgb(0, 144, 255);
           box-shadow: 40px 35px 46px 0px rgb(0, 144, 255);
+}
+.container .answer--wrapper {
+  padding: 10px 20px;
+  border: 1px solid black;
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 8px;
+}
+.container h2 {
+  color: black;
+  font-size: 20px;
+  font-family: monospace;
+  margin-block: 20px;
+}
+.container p {
+  color: rgb(55, 0, 255);
+  font-size: 16px;
+  font-family: sans-serif;
 }
